Fix path in source

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BTS webpage!</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="jungkook">
-      <img src="/images/jungkook.jpg" />
+      <img src="./images/jungkook.jpg" />
       <h2>"JUNGKOOK"</h2>
       <h4>Jeon Jung-kook</h4>
       <p>
@@ -30,7 +30,7 @@
       <a href="https://www.instagram.com/abcdefghi__lmnopqrstuvwxyz/">Ig</a>
     </div>
     <div id="taehyung">
-      <img src="/images/vbts.jpg" />
+      <img src="./images/vbts.jpg" />
       <h2>"V"</h2>
       <h4>Kim Tae-Hyung</h4>
       <p>
@@ -42,7 +42,7 @@
       <a href="https://www.instagram.com/thv/">Ig</a>
     </div>
     <div id="jhope">
-      <img src="/images/jhope.jpg" />
+      <img src="./images/jhope.jpg" />
       <h2>"J-HOPE"</h2>
       <h4>Jung Ho-seok</h4>
       <p>
@@ -54,7 +54,7 @@
       <a href="https://www.instagram.com/uarmyhope/">Ig</a>
     </div>
     <div id="yoongi">
-      <img src="/images/suga.jpg" />
+      <img src="./images/suga.jpg" />
       <h2>"SUGA" ou "AGUST D"</h2>
       <h4>Min Yoon-gi</h4>
       <p>
@@ -70,7 +70,7 @@
       <a href="https://www.instagram.com/agustd/">Ig</a>
     </div>
     <div id="jin">
-      <img src="/images/jin.jpg" />
+      <img src="./images/jin.jpg" />
       <h2>"JIN"</h2>
       <h4>Kim Seok-jin</h4>
       <p>
@@ -87,7 +87,7 @@
       <a href="https://www.instagram.com/jin/">Ig</a>
     </div>
     <div id="jimin">
-      <img src="/images/jimin.jpg" />
+      <img src="./images/jimin.jpg" />
       <h2>"JIMIN"</h2>
       <h4>Park Ji-min</h4>
       <p>
@@ -103,7 +103,7 @@
       <a href="https://www.instagram.com/j.m/">Ig</a>
     </div>
     <div id="namjoon">
-      <img src="/images/namjoon.png" />
+      <img src="./images/namjoon.png" />
       <h2>"RM"</h2>
       <h4>Kim Nam-joon</h4>
       <p>
